fix height jump issue

--- a/osx/www/stylesheets/global.css
+++ b/osx/www/stylesheets/global.css
@@ -1,12 +1,14 @@
 * {
+  margin: 0;
+  padding: 0;
   -webkit-user-select: none;  /* prevent copy paste for all elements */
 }
 
 body {
-    background: #fff;
-    height: 100%;
+    background: #ff0;
+    max-height: 100%;
     font-family: Helvetica, Verdana;
-    font-size: 62.5%;
+    font-size: 0;
     line-height: 1;
     margin: 0;
     padding: 0;
@@ -20,11 +22,17 @@ h2 {
 
 html {
     height: 100%;
+    overflow: hidden;
     width: 100%;
 }
 
+img {
+  max-height: 100%;
+  max-width: 100%
+}
+
 #app {
-    height: 100%;
+    max-height: 100%;
     width: 100%;
     white-space: nowrap;
         -webkit-backface-visibility: hidden;
@@ -37,13 +45,14 @@ html {
 }
 
 #cards {
-    height: 100%;
+    max-height: 100%;
     margin: 0;
     padding: 0;
     width: 100%;
 }
 
 #cards .card {
+    bottom: 0;
     display: none;
     height: 100%;
     left: 0;
